Fix warnings and improve code quality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   quality-lab-pro:
     restart: on-failure
-    # image: quality-lab-pro
+    image: leonardomeireles55/quality-lab-pro-back-end:latest
     build:
       context: ./ 
       dockerfile: Dockerfile
