Fix cache configs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server config
-spring.profiles.active=local
+spring.profiles.active=prod
 spring.output.ansi.enabled=ALWAYS
 logging.level.leonardo=DEBUG
 logging.file.name=logging_file.log
