--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mariadb:
-    image: mariadb:10.10
+    image: mariadb:latest
     restart: always
     env_file: ./.env
     environment:
@@ -17,9 +17,6 @@ services:
   quality-lab-pro:
     restart: on-failure
     image: leonardomeireles55/quality-lab-pro-back-end:latest
-    build:
-      context: ./ 
-      dockerfile: Dockerfile
     working_dir: /usr/src/app
     container_name: quality-lab-pro
     env_file: ./.env
@@ -34,7 +31,7 @@ services:
   
   nginx:
     restart: always
-    image: nginx
+    image: nginx:latest
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./nginx:/etc/nginx:ro
