Add CI/CD pipeline for Docker image build and deployment
- Set up GitHub Actions workflow for Docker image CI/CD
- Configure build job to build and push Docker image
- Configure deploy job to pull and deploy Docker image
- Add caching for Docker layers to improve build performance
- Log in to Docker Hub using secrets
- Notify upon successful deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${DB_USER}
       SPRING_DATASOURCE_PASSWORD: ${DB_ROOT_PASSWORD}
+    command: ["java", "-jar", "-Dspring.profiles.active=prod", "app.jar"]
     networks:
       - qualitylab-net
   
