--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,17 @@ spring.profiles.active=prod
 spring.output.ansi.enabled=ALWAYS
 logging.level.leonardo=DEBUG
 logging.file.name=logging_file.log
-server.port = ${SERVER_LOCAL_PORT}
+server.port=${SERVER_LOCAL_PORT}
 
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=${env:SPRING_DATASOURCE_URL}
-spring.datasource.username=${env:DB_USER}
-spring.datasource.password=${env:DB_ROOT_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
 server.error.include-stacktrace=never
-api.security.token.secret=${env:JWT_SECRET}
-api.security.issuer=${env:ISSUER}
+api.security.token.secret=${JWT_SECRET}
+api.security.issuer=${ISSUER}
 
 spring.threads.virtual.enabled=true
 spring.datasource.tomcat.validation-query=SELECT 1
