--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # spring.main.banner-mode=off
-spring.datasource.url=${env:SPRING_DATASOURCE_URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=false
