--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
 server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET}
-api.security.issuer=${ISSUER}
+api.security.tokenSecret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
 
 spring.threads.virtual.enabled=true
 spring.datasource.tomcat.validation-query=SELECT 1
