--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,15 +2,14 @@ server.port = 8080
 
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://0.0.0.0:3306/lab_api_alpha
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/lab_api_alpha_}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.flyway.clean-disabled=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 server.error.include-stacktrace=never
-api.security.token.secret=${env:JWT_SECRET}
-api.security.issuer=${env:ISSUER}
-
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
+api.security.issuer=${API_SECURITY_ISSUER:lab-api}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
