--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Server config
-spring.profiles.active=prod
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 spring.output.ansi.enabled=ALWAYS
 logging.level.leonardo=DEBUG
 logging.file.name=logging_file.log
-server.port=${SERVER_LOCAL_PORT}
+server.port=${SERVER_LOCAL_PORT:8080}
 
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -12,8 +12,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
 server.error.include-stacktrace=never
-api.security.token.secret=${JWT_SECRET}
-api.security.tokenSecret=${API_SECURITY_TOKEN_SECRET}
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
 api.security.issuer=${API_SECURITY_ISSUER}
 
 spring.threads.virtual.enabled=true
