--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
 api.security.issuer=${API_SECURITY_ISSUER:lab-api}
+spring.jpa.open-in-view=false
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
