--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/lab_api_test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.flyway.clean-disabled=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
 api.security.issuer=${API_SECURITY_ISSUER:lab-api}
