--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=false
 server.error.include-stacktrace=never
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
 api.security.issuer=${API_SECURITY_ISSUER}
+spring.jpa.open-in-view=false
 
 spring.threads.virtual.enabled=true
 spring.datasource.tomcat.validation-query=SELECT 1
