feat: add created_at and updated_at timestamps to User entity
- Added `created_at` and `updated_at` fields to the `User` entity.
- Used `@CreationTimestamp` and `@UpdateTimestamp` annotations for automatic timestamp management.
- Created migration script to add the new columns to the `users` table in the database.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,10 @@
-# spring.main.banner-mode=off
+ spring.main.banner-mode=off
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
+server.error.include-stacktrace=never
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
 spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.hibernate.ddl-auto=none
-
