Update application.properties with database and mail configurations
- Set active Spring profile to local by default
- Enable ANSI output for logging
- Configure logging level and file
- Set server port with default value
- Expose all management endpoints and show health details
- Configure MariaDB datasource with environment variables
- Disable JPA SQL logging and stacktrace inclusion in errors
- Add security token and issuer configurations
- Disable JPA open-in-view
- Enable virtual threads
- Add Tomcat datasource validation settings
- Configure SMTP settings for Gmail

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
- spring.main.banner-mode=off
+spring.main.banner-mode=off
+logging.level.leonardo=DEBUG
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${DB_USER}
@@ -8,3 +9,10 @@ server.error.include-stacktrace=never
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
 api.security.issuer=${API_SECURITY_ISSUER}
 spring.jpa.open-in-view=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
