--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.output.ansi.enabled=ALWAYS
 logging.level.leonardo=DEBUG
 logging.file.name=logging_file.log
 server.port=${SERVER_LOCAL_PORT:8080}
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+#management.endpoint.health.show-components=always
 
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -24,7 +27,7 @@ spring.datasource.tomcat.validation-interval=60000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=test
-spring.mail.password=test
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
