--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,6 @@
 server.port = 8080
-
+logging.level.leonardo=DEBUG
+management.endpoint.health.show-details=always
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/lab_api_alpha_}
@@ -18,7 +19,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=test@gmail.com
-spring.mail.password=test_password
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
