Update application.properties with database and mail configurations
- Set active Spring profile to local by default
- Enable ANSI output for logging
- Configure logging level and file
- Set server port with default value
- Expose all management endpoints and show health details
- Configure MariaDB datasource with environment variables
- Disable JPA SQL logging and stacktrace inclusion in errors
- Add security token and issuer configurations
- Disable JPA open-in-view
- Enable virtual threads
- Add Tomcat datasource validation settings
- Configure SMTP settings for Gmail

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       SERVER_PORT: ${SERVER_DOCKER_PORT}
       API_SECURITY_TOKEN_SECRET: ${API_SECURITY_TOKEN_SECRET}
       API_SECURITY_ISSUER: ${API_SECURITY_ISSUER}
+      SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
+      SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
     command: ["java", "-jar", "-Dspring.profiles.active=prod", "app.jar"]
     networks:
       - qualitylab-net
