feat: add @InjectEmailList decorator and aspect for email list injection
- Created @InjectEmailList annotation for injecting email lists.
- Implemented InjectEmailListAspect to handle the injection logic.
- Added ApplicationContextProvider to provide application context.
- Updated EmailService to use @InjectEmailList for email list injection.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,4 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+EMAIL_TO_SEND_LIST=${EMAIL_TO_SEND_LIST}
