- Add method to validate analytics existence - Implement rule violation checking - Add grouped results functionality with statistics - Include validation for empty results - Add level-based analytics grouping with mean/std calculations

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,9 +1,9 @@
-server.port = 8080
+server.port=8080
 logging.level.leonardo=DEBUG
 management.endpoint.health.show-details=always
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/lab_api_alpha_}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/lab_api_alpha}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.flyway.clean-disabled=false
@@ -12,11 +12,9 @@ server.error.include-stacktrace=never
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
 api.security.issuer=${API_SECURITY_ISSUER:lab-api}
 spring.jpa.open-in-view=false
-
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SPRING_MAIL_USERNAME}
