--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       API_SECURITY_ISSUER: ${API_SECURITY_ISSUER}
       SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
       SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
+      EMAIL_TO_SEND_LIST: ${EMAIL_TO_SEND_LIST}
     command: [ "java", "-jar", "-Dspring.profiles.active=prod", "app.jar" ]
     networks:
       - qualitylab-net
