--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -21,4 +21,4 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-EMAIL_TO_SEND_LIST=${EMAIL_TO_SEND_LIST}
+email.to.send.list=${EMAIL_TO_SEND_LIST}
