chore: update dependencies and refactor configuration files for improved clarity

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,18 +1,37 @@
+# ===============================
+# = SERVER CONFIGURATION
+# ===============================
 spring.main.banner-mode=off
+server.error.include-stacktrace=never
+
+# ===============================
+# = LOGGING CONFIGURATION
+# ===============================
 logging.level.leonardo=DEBUG
+
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
-server.error.include-stacktrace=never
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
-api.security.issuer=${API_SECURITY_ISSUER}
 spring.jpa.open-in-view=false
+
+# ===============================
+# = EMAIL CONFIGURATION
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
-email.to.send.list=${EMAIL_TO_SEND_LIST}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+email.to.send.list=${EMAIL_TO_SEND_LIST}
+
+# ===============================
+# = SECURITY CONFIGURATION
+# ===============================
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
