--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,44 @@
-# Server config
+# ===============================
+# = SERVER CONFIGURATION
+# ===============================
+server.port=${SERVER_LOCAL_PORT:8080}
+server.error.include-stacktrace=never
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 spring.output.ansi.enabled=ALWAYS
+spring.threads.virtual.enabled=true
+
+# ===============================
+# = LOGGING CONFIGURATION
+# ===============================
 logging.level.leonardo=DEBUG
 logging.file.name=logging_file.log
-server.port=${SERVER_LOCAL_PORT:8080}
+
+# ===============================
+# = MONITORING
+# ===============================
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #management.endpoint.health.show-components=always
-# Database config
+
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
-server.error.include-stacktrace=never
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
-api.security.issuer=${API_SECURITY_ISSUER}
 spring.jpa.open-in-view=false
-spring.threads.virtual.enabled=true
+
+# Database Connection Pool
 spring.datasource.tomcat.validation-query=SELECT 1
 spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-interval=60000
+
+# ===============================
+# = EMAIL CONFIGURATION
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SPRING_MAIL_USERNAME}
@@ -29,3 +46,9 @@ spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 email.to.send.list=${EMAIL_TO_SEND_LIST}
+
+# ===============================
+# = SECURITY CONFIGURATION
+# ===============================
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
