--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,15 @@
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
+spring.jpa.database=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
-spring.jpa.database=h2
-spring.datasource.url=jdbc:h2:mem:lab_api_alpha;DATABASE_TO_UPPER=false
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.show-sql=true
 
+# H2 Specific Configuration
+spring.datasource.url=jdbc:h2:mem:lab_api_alpha
+DATABASE_TO_UPPER=false
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=
