--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,20 +1,34 @@
+# ===============================
+# = SERVER CONFIGURATION
+# ===============================
 server.port=8080
-# Database config
+server.error.include-stacktrace=never
+
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/lab_api_test
 spring.datasource.username=root
 spring.datasource.password=root
-spring.flyway.clean-disabled=false
 spring.jpa.show-sql=true
-server.error.include-stacktrace=never
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
-api.security.issuer=${API_SECURITY_ISSUER:lab-api}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.flyway.clean-disabled=false
+
+# ===============================
+# = EMAIL CONFIGURATION
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=test@gmail.com
 spring.mail.password=test_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ===============================
+# = SECURITY CONFIGURATION
+# ===============================
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
+api.security.issuer=${API_SECURITY_ISSUER:lab-api}
