--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ logging.level.leonardo=DEBUG
 management.endpoint.health.show-details=always
 # Database config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/lab_api_alpha}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.flyway.clean-disabled=false
