Refactor: Update application-local.properties for improved configuration and apply best practices.
- Configure logging levels for leonardo and Http11Processor
- Enable detailed health endpoint management
- Set up database connection with MariaDB driver and Flyway settings
- Configure email settings for Gmail SMTP
- Add security token and issuer configurations

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,20 +1,37 @@
+# ===============================
+# = SERVER CONFIGURATION
+# ===============================
 server.port=8080
+server.error.include-stacktrace=never
+
+# ===============================
+# = LOGGING CONFIGURATION
+# ===============================
 logging.level.leonardo=DEBUG
+logging.level.org.apache.coyote.http11.Http11Processor=DEBUG
+
+# ===============================
+# = MANAGEMENT CONFIGURATION
+# ===============================
 management.endpoint.health.show-details=always
-# Database config
+
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.flyway.clean-disabled=false
 spring.jpa.show-sql=true
-server.error.include-stacktrace=never
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
-api.security.issuer=${API_SECURITY_ISSUER:lab-api}
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+# ===============================
+# = EMAIL CONFIGURATION
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SPRING_MAIL_USERNAME}
@@ -22,3 +39,9 @@ spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 email.to.send.list=${EMAIL_TO_SEND_LIST}
+
+# ===============================
+# = SECURITY CONFIGURATION
+# ===============================
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
