--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,7 @@ server.error.include-stacktrace=never
 # = LOGGING CONFIGURATION
 # ===============================
 logging.level.leonardo=DEBUG
+logging.level.org.apache.coyote.http11.Http11Processor=DEBUG
 
 # ===============================
 # = DATABASE CONFIGURATION
