hotfix: reduce size docker image file.

--- a/docker-compose-db-only.yml
+++ b/docker-compose-db-only.yml
@@ -1,6 +1,6 @@
 services:
   mariadb:
-    image: mariadb:10.10
+    image: mariadb:lts
     restart: always
     env_file: ./.env
     environment:
