--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,6 @@
 services:
   mariadb:
-    image: mariadb:11.2
+    image: mariadb:lts
     restart: always
     env_file: ./.env
     environment:
@@ -41,7 +41,7 @@ services:
 
   nginx:
     restart: always
-    image: nginx
+    image: cgr.dev/chainguard/nginx:latest
     volumes:
       - ./nginx/dev:/etc/nginx:ro
     ports:
