--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,23 +38,31 @@ jobs:
         uses: actions/checkout@v4
       - name: Deploy
         env:
-          DB_DATABASE: ${{ secrets.DB_DATABASE }}
-          DB_DATABASE_TEST: ${{ secrets.DB_DATABASE_TEST }}
-          DB_ROOT_PASSWORD: ${{ secrets.DB_ROOT_PASSWORD }}
-          DB_LOCAL_PORT: ${{ secrets.DB_LOCAL_PORT }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_DOCKER_PORT: ${{ secrets.DB_DOCKER_PORT }}
-          SERVER_LOCAL_PORT: ${{ secrets.SERVER_LOCAL_PORT }}
-          SERVER_DOCKER_PORT: ${{ secrets.SERVER_DOCKER_PORT }}
-          SPRING_PROFILES_ACTIVE: ${{ secrets.SPRING_PROFILES_ACTIVE }}
-          SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
-          API_SECURITY_ISSUER: ${{ secrets.API_SECURITY_ISSUER }}
-          API_SECURITY_TOKEN_SECRET: ${{ secrets.API_SECURITY_TOKEN_SECRET }}
-          SPRING_MAIL_USERNAME: ${{ secrets.SPRING_MAIL_USERNAME }}
-          SPRING_MAIL_PASSWORD: ${{ secrets.SPRING_MAIL_PASSWORD }}
-          EMAIL_TO_SEND_LIST: ${{ secrets.EMAIL_TO_SEND_LIST }}
+          DB_DATABASE: ${DB_DATABASE}
+          DB_DATABASE_TEST: ${DB_DATABASE_TEST}
+          DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+          DB_LOCAL_PORT: ${DB_LOCAL_PORT}
+          DB_USER: ${DB_USER}
+          DB_DOCKER_PORT: ${DB_DOCKER_PORT}
+          SERVER_LOCAL_PORT: ${secrets.SERVER_LOCAL_PORT}
+          SERVER_DOCKER_PORT: ${SERVER_DOCKER_PORT}
+          SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
+          SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL }
+          API_SECURITY_ISSUER: ${API_SECURITY_ISSUER}
+          API_SECURITY_TOKEN_SECRET: ${API_SECURITY_TOKEN_SECRET}
+          SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
+          SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
+          EMAIL_TO_SEND_LIST: ${EMAIL_TO_SEND_LIST}
         run: |
           docker-compose pull
           docker-compose up -d
       - name: Notify deployment
         run: echo "Deployment completed successfully"
+      - name: Running scripts
+        run: ./.github/scripts/cleanup_docker.sh
+      - name: Wait for server to be ready and healthy test
+        run: |
+          until curl -sSf http://localhost:${SERVER_LOCAL_PORT}/actuator/health; do
+            echo "Waiting for server..."
+            sleep 5
+          done
