hotfix: fix workflow.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,21 +38,21 @@ jobs:
         uses: actions/checkout@v4
       - name: Deploy
         env:
-          DB_DATABASE: ${DB_DATABASE}
-          DB_DATABASE_TEST: ${DB_DATABASE_TEST}
-          DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-          DB_LOCAL_PORT: ${DB_LOCAL_PORT}
-          DB_USER: ${DB_USER}
-          DB_DOCKER_PORT: ${DB_DOCKER_PORT}
-          SERVER_LOCAL_PORT: ${secrets.SERVER_LOCAL_PORT}
-          SERVER_DOCKER_PORT: ${SERVER_DOCKER_PORT}
-          SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
-          SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL }
-          API_SECURITY_ISSUER: ${API_SECURITY_ISSUER}
-          API_SECURITY_TOKEN_SECRET: ${API_SECURITY_TOKEN_SECRET}
-          SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
-          SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
-          EMAIL_TO_SEND_LIST: ${EMAIL_TO_SEND_LIST}
+          DB_DATABASE: ${{ env.DB_DATABASE }}
+          DB_DATABASE_TEST: ${{ env.DB_DATABASE_TEST }}
+          DB_ROOT_PASSWORD: ${{ env.DB_ROOT_PASSWORD }}
+          DB_LOCAL_PORT: ${{ env.DB_LOCAL_PORT }}
+          DB_USER: ${{ env.DB_USER }}
+          DB_DOCKER_PORT: ${{ env.DB_DOCKER_PORT }}
+          SERVER_LOCAL_PORT: ${{ env.SERVER_LOCAL_PORT }}
+          SERVER_DOCKER_PORT: ${{ env.SERVER_DOCKER_PORT }}
+          SPRING_PROFILES_ACTIVE: ${{ env.SPRING_PROFILES_ACTIVE }}
+          SPRING_DATASOURCE_URL: ${{ env.SPRING_DATASOURCE_URL }}
+          API_SECURITY_ISSUER: ${{ env.API_SECURITY_ISSUER }}
+          API_SECURITY_TOKEN_SECRET: ${{ env.API_SECURITY_TOKEN_SECRET }}
+          SPRING_MAIL_USERNAME: ${{ env.SPRING_MAIL_USERNAME }}
+          SPRING_MAIL_PASSWORD: ${{ env.SPRING_MAIL_PASSWORD }}
+          EMAIL_TO_SEND_LIST: ${{ env.EMAIL_TO_SEND_LIST }}
         run: |
           docker-compose pull
           docker-compose up -d
@@ -62,7 +62,7 @@ jobs:
         run: ./.github/scripts/cleanup_docker.sh
       - name: Wait for server to be ready and healthy test
         run: |
-          until curl -sSf http://localhost:${SERVER_LOCAL_PORT}/actuator/health; do
+          until curl -sSf http://localhost:${{ env.SERVER_LOCAL_PORT }}/actuator/health; do
             echo "Waiting for server..."
             sleep 5
           done
