hotfix: fix workflow.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,11 +58,13 @@ jobs:
           docker-compose up -d
       - name: Notify deployment
         run: echo "Deployment completed successfully"
-      - name: Running scripts
-        run: ./.github/scripts/cleanup_docker.sh
       - name: Wait for server to be ready and healthy test
         run: |
           until curl -sSf http://localhost:${{ secrets.SERVER_LOCAL_PORT }}/actuator/health; do
             echo "Waiting for server..."
             sleep 5
           done
+      - name: Set execute permission for cleanup script
+        run: chmod +x ./.github/scripts/cleanup_docker.sh
+      - name: Running scripts
+        run: ./.github/scripts/cleanup_docker.sh
