hotfix: fix workflow.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -60,6 +60,7 @@ jobs:
         run: echo "Deployment completed successfully"
       - name: Wait for server to be ready and healthy test
         run: |
+          sleep 5
           until curl -sSf http://localhost:${{ secrets.SERVER_LOCAL_PORT }}/actuator/health; do
             echo "Waiting for server..."
             sleep 5
