hotfix: fix workflow.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,14 @@ server.error.include-stacktrace=never
 # = LOGGING CONFIGURATION
 # ===============================
 logging.level.leonardo=DEBUG
-logging.level.org.apache.coyote.http11.Http11Processor=DEBUG
+
+# ===============================
+# = MONITORING
+# ===============================
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
+management.health.ssl.enabled=false
+management.health.email.enabled=false
 
 # ===============================
 # = DATABASE CONFIGURATION
