--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,11 +8,11 @@ server.error.include-stacktrace=never
 # = LOGGING CONFIGURATION
 # ===============================
 logging.level.leonardo=DEBUG
-logging.level.org.apache.coyote.http11.Http11Processor=DEBUG
 
 # ===============================
 # = MANAGEMENT CONFIGURATION
 # ===============================
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 # ===============================
