--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,8 +12,10 @@ logging.level.leonardo=DEBUG
 # ===============================
 # = MANAGEMENT CONFIGURATION
 # ===============================
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
+management.health.ssl.enabled=false
+management.health.email.enabled=false
 
 # ===============================
 # = DATABASE CONFIGURATION
