--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,7 @@ server.error.include-stacktrace=never
 # = LOGGING CONFIGURATION
 # ===============================
 logging.level.leonardo=DEBUG
+spring.mail.properties.mail.debug=true
 
 # ===============================
 # = MONITORING
@@ -37,9 +38,7 @@ spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
 email.to.send.list=${EMAIL_TO_SEND_LIST}
 
 # ===============================
