--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,10 @@ logging.file.name=logging_file.log
 # ===============================
 # = MONITORING
 # ===============================
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
+management.health.ssl.enabled=false
+management.health.email.enabled=false
 
 # ===============================
 # = DATABASE CONFIGURATION
