--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -36,7 +36,7 @@ spring.mail.port=587
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 email.to.send.list=${EMAIL_TO_SEND_LIST}
 
