--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -68,14 +68,13 @@ http {
 
     server {
         listen 443 ssl;
-        server_name 
-            leomeireles-dev.xyz 
-            www.leomeireles-dev.xyz 
-            quality-lab-pro.leomeireles-dev.xyz 
-            www.quality-lab-pro.leomeireles-dev.xyz;
+        server_name lab-spec.systems www.lab-spec.systems;
 
-        ssl_certificate /etc/letsencrypt/live/leomeireles-dev.xyz/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/leomeireles-dev.xyz/privkey.pem;
+        ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.csr;
+        ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
+
+;         ssl_certificate /etc/letsencrypt/live/leomeireles-dev.xyz/fullchain.pem;
+;         ssl_certificate_key /etc/letsencrypt/live/leomeireles-dev.xyz/privkey.pem;
 
         add_header X-Content-Type-Options nosniff;
         add_header X-Frame-Options DENY;
