--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,44 +66,42 @@ http {
     access_log /var/log/nginx/quality-lab-pro-access.log combined buffer=16k;
     error_log /var/log/nginx/quality-lab-pro-error.log warn;
 
-    server {
-        listen 443 ssl;
-        server_name lab-spec.systems www.lab-spec.systems;
+   server {
+       listen 443 ssl;
+       server_name lab-spec.systems www.lab-spec.systems;
 
-        ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.csr;
-        ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
+       ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.crt;
+       ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
 
-        add_header X-Content-Type-Options nosniff;
-        add_header X-Frame-Options DENY;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+       add_header X-Content-Type-Options nosniff;
+       add_header X-Frame-Options DENY;
+       add_header X-XSS-Protection "1; mode=block";
+       add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
+       location /backend-api/ {
+           proxy_pass http://quality-lab-pro/;
+           proxy_http_version 1.1;
+           proxy_set_header Connection "";
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
 
-        location /backend-api/ {
-            proxy_pass http://quality-lab-pro/;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            client_max_body_size 10m;
-        }
+           client_max_body_size 10m;
+       }
 
-        location / {
-            proxy_pass http://quality-lab-pro-frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            client_max_body_size 10m;
+       location / {
+           proxy_pass http://quality-lab-pro-frontend;
+           proxy_http_version 1.1;
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
+           client_max_body_size 10m;
 
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-
-        }
+           proxy_no_cache 1;
+           proxy_cache_bypass 1;
+       }
     }
 
     map $sent_http_content_type $expires {
