--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,12 +66,13 @@ http {
     access_log /var/log/nginx/quality-lab-pro-access.log combined buffer=16k;
     error_log /var/log/nginx/quality-lab-pro-error.log warn;
 
-   server {
-       listen 443 ssl;
-       server_name lab-spec.systems www.lab-spec.systems;
+    server {
+        listen 443 ssl;
+        server_name lab-spec.systems www.lab-spec.systems;
 
-       ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.crt;
-       ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
+        ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.crt;
+        ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
+        ssl_trusted_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.ca-bundle.crt;
 
        add_header X-Content-Type-Options nosniff;
        add_header X-Frame-Options DENY;
