hotfix: nginx fixes.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -71,9 +71,9 @@ http {
         server_name lab-spec.systems www.lab-spec.systems;
 
 
-        ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.crt;
-        ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
-        ssl_trusted_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.ca-bundle.crt;
+       ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.pem;
+       ssl_certificate_key /etc/ssl/lab-spec.systems/lab-spec.systems.key;
+       ssl_trusted_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.pem;
 
        add_header X-Content-Type-Options nosniff;
        add_header X-Frame-Options DENY;
