hotfix: cors fixes.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -68,7 +68,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name lab-spec.systems www.lab-spec.systems labgraph.lab-spec.systems;
+        server_name lab-spec.systems www.lab-spec.systems labgraph.lab-spec.systems www.labgraph.lab-spec.systems;
 
 
        ssl_certificate /etc/ssl/lab-spec.systems/lab-spec.systems.pem;
