--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,8 @@ jobs:
         run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
       - name: Build and push Docker image
         run: |
-          docker-compose -f docker-compose.build.yml build
-          docker-compose -f docker-compose.build.yml push
+          docker compose -f docker-compose.build.yml build
+          docker compose -f docker-compose.build.yml push
 
   deploy:
     runs-on: [ self-hosted, linux, x64, backend ]
@@ -54,8 +54,8 @@ jobs:
           SPRING_MAIL_PASSWORD: ${{ secrets.SPRING_MAIL_PASSWORD }}
           EMAIL_TO_SEND_LIST: ${{ secrets.EMAIL_TO_SEND_LIST }}
         run: |
-          docker-compose pull
-          docker-compose up -d
+          docker compose pull
+          docker compose up -d
 
   notify:
     runs-on: [ self-hosted, linux, x64, backend ]
