--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,10 +32,9 @@ spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
 # Database Connection Pool
-spring.datasource.tomcat.validation-query=SELECT 1
-spring.datasource.tomcat.test-on-borrow=true
-spring.datasource.tomcat.test-while-idle=true
-spring.datasource.tomcat.validation-interval=60000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=300000
 
 # ===============================
 # = EMAIL CONFIGURATION
