--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,11 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=300000
 
+# Default Pagination Settings
+spring.data.web.pageable.default-page-size=40
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.size-parameter=size
+
 # ===============================
 # = EMAIL CONFIGURATION
 # ===============================
