--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI/CD
 
 on:
   push:
-    branches: [ 'dev/workflows' ]
+    branches: [ 'master' ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -18,6 +18,9 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        
+      - name: Ensure buildx cache
+        run: mkdir -p /tmp/.buildx-cache
         
       - name: Cache Docker layers
         uses: actions/cache@v3
