refactor: improve AnalyticsRepository queries and enhance ControlRulesValidators with constants

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -26,9 +26,10 @@ spring.mail.username=test@gmail.com
 spring.mail.password=test_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+email.to.send.list=your-email@example.com,your2-email@example.com
 
 # ===============================
 # = SECURITY CONFIGURATION
 # ===============================
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
-api.security.issuer=${API_SECURITY_ISSUER:lab-api}
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
