fix: update security token secret and issuer in application-test.properties

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -31,5 +31,5 @@ email.to.send.list=your-email@example.com,your2-email@example.com
 # ===============================
 # = SECURITY CONFIGURATION
 # ===============================
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
-api.security.issuer=${API_SECURITY_ISSUER}
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
+api.security.issuer=${API_SECURITY_ISSUER:lab-api}
