feat: add caching support for analytics services and update application properties for performance improvements

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,8 @@
 # = SERVER CONFIGURATION
 # ===============================
 spring.main.banner-mode=off
+spring.main.lazy-initialization=true
+server.compression.enabled=false
 server.error.include-stacktrace=never
 
 # ===============================
