--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.error.include-stacktrace=never
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 spring.output.ansi.enabled=ALWAYS
 spring.threads.virtual.enabled=true
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500, expireAfterWrite=5m
 
 # ===============================
 # = LOGGING CONFIGURATION
