--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,6 +3,8 @@
 # ===============================
 server.port=8080
 server.error.include-stacktrace=never
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500, expireAfterWrite=5m
 
 # ===============================
 # = DATABASE CONFIGURATION
