chore: update README for clarity, restructure project layout, and enhance logging configuration

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,15 +7,13 @@ server.error.include-stacktrace=never
 # ===============================
 # = LOGGING CONFIGURATION
 # ===============================
-logging.level.leonardo=DEBUG
+logging.level.leonardo=TRACE
 
 # ===============================
 # = MANAGEMENT CONFIGURATION
 # ===============================
-management.endpoints.web.exposure.include=health
-management.endpoint.health.show-details=never
-management.health.ssl.enabled=false
-management.health.email.enabled=false
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
 # ===============================
 # = DATABASE CONFIGURATION
