--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,7 +9,7 @@ server.error.include-stacktrace=never
 # ===============================
 # = LOGGING CONFIGURATION
 # ===============================
-logging.level.leonardo=DEBUG
+logging.level.leonardo=INFO
 spring.mail.properties.mail.debug=true
 
 # ===============================
