--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -16,12 +16,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: remove buildx cache
-        run: rm -rf /tmp/.buildx-cache
-
-      - name: Clean up Docker Buildx
-        run: docker buildx prune --all --force
-      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
@@ -122,7 +116,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Running cleanup script
         run: |
-          chmod 777 ./.github/scripts/cleanup_system.sh
+          chmod +x ./.github/scripts/cleanup_system.sh
           ./.github/scripts/cleanup_system.sh
 
   notify:
