refactor: add caching and access log configuration for JPEG images in nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,6 +41,14 @@ http {
         text/javascript
         image/svg+xml;
 
+    location ~* \.(jpg|jpeg)$ {
+        root /;  # Root directory
+        try_files $uri =404;
+        access_log off;
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
     upstream quality-lab-pro {
         least_conn;
         server quality-lab-pro:8080;
